<resources>
    <string name="app_name">CoffeeShop</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Ananthalakshmi Sankar</string>
    <string name="nav_header_subtitle">ananthalakshmi-sat@j-access.co.jp</string>
    <string name="nav_header_desc">Kohi customer</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_location">Location</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_faq">FAQs</string>
    <string name="menu_send">Send</string>
    <string name="menu_help">Help</string>
    <string name="menu_contact">Contact Us</string>
    <string name="text_home">Task Matrix</string>
    <string name="title_activity_maps">Map</string>
    <string name="tabbar_left" >Left</string>
    <string name="tabbar_right">Gallery</string>
    <string name="tabbar_center">Reservation</string>
</resources>
